utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/OptionInheritType.ide
package invalid

typedef configuration OptionInheritType {
    option option1: Common {
        label "Some Label"
        required true
    }

    option option2: Common {
        label "Some Label"
        required true
    }

    configuration sub: OptionInheritTypeComponent {
        inherit sub1 from option1
        inherit sub2 from option2
    }
}
